# Analisis-Sentimen-Corona-DKI-Jakarta

./: .coveragerc  .gitignore  .pre-commit-config.yaml  ADE.ipynb  API.json  API.py  API.txt  Analisis Sentimen.ipynb  Analizer.py  CONFIG.json  Crawl Twitter.py  Crawl_Twitter.py  Kodingan_ADE.ipynb  Kodingan_Analisis Sentimen.ipynb  Kodingan_Sampling.ipynb  Kodingan_WordCloud.ipynb  LICENSE  Main.py  Makefile  Output.csv  README.md  Sample Tweet.csv  Sampling.ipynb  Stopword.txt  config.json  config.py  crawler.py  get_API.py  main.py  nltk-handler.py  onnx-converter.py  pyproject.toml  requirements.txt  test-result.json  test.py  tox.ini  utils.py
.github/workflows/: linting.yaml  testing.yaml
Kamus/: Kata_Negatif.txt  Kata_Positif.txt
Main_Model/: vectorizer_tfidf.pickle
Sentiment_Model/: sentiment_model_positif.pickle  sentiment_word_tfidf_negatif.pickle
data/: Crawling Twitter Jakarta 26.csv  Sample Tweet.csv
kamus/: Kata Negatif.txt  Kata Positif.txt
model/: [TRAINED] Decision Tree Classifier.pickle  [TRAINED] Logistic Regression.pickle  [TRAINED] Pipelined TF-IDF - SVM.onnx  [TRAINED] Random Forest Classifier.pickle  [TRAINED] SVM.pickle  vectorizer_count.pickle
model/sentiment/: sentiment_model_negatif.pickle
model/vectorizer/: [TRAINED] TF-IDF Vectorizer.pickle  vectorizer_tfidf.pickle
models/: [TRAINED] Pipelined TF-IDF - SVM.pickle
notebook/: ADE.ipynb  Analisis Sentimen.ipynb  Sampling.ipynb  WordCloud.ipynb
scripts/: crawler.py  main.py  onnx-converter.py  utils.py
src/: __main__.py  main.py  model.py  model_tester.py  onnx_converter.py  preprocessing.py  scraper.py  utils.py
tests/: test_model.py  test_model_tester.py  test_onnx_converter.py  test_preprocessing.py  test_scrape.py  test_utils.py
