[tool.poetry]
name = "analisis-sentimen-corona-dki-jakarta"
version = "1.0.0"
description = "Analisis Sentimen Twitter untuk mengetahui Dampak dari Pandemi COVID-19 terhadap masyarakat Jakarta menggunakan TF-IDF Vectorizer & SVM"
authors = ["Wahyu Setianto <wahyusetianto19@gmail.com>"]
license = "MIT"

[tool.poetry.urls]
repository = "https://github.com/Hyuto/Analisis-Sentimen-Corona-DKI-Jakarta"
"Bug Tracker" = "https://github.com/Hyuto/Analisis-Sentimen-Corona-DKI-Jakarta/issues"

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.1"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
seaborn = "^0.11.2"
scikit-learn = "^1.1.1"
PySastrawi = "^1.2.0"
skl2onnx = "^1.11.2"
wordcloud = "^1.8.2"
jupyter = { version = "^1.0.0", optional = true }
snscrape = "^0.4.3"
typer = { extras = ["all"], version = "^0.7.0" }
psutil = "^5.9.4"

[tool.poetry.dev-dependencies]
black = { extras = ["jupyter"], version = "^22.6.0" }
isort = "^5.10.1"
mypy = "^0.971"
pytest = "^7.1.2"
coverage = "^6.4.2"
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"

[tool.poetry.extras]
jupyter = ["jupyter"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ['src']
show_error_codes = true
strict = true

[tool.black]
line-length = 100
include = '\.pyi?$'
extend-exclude = '''
/(
  \.git
  | __pycache__
  | \.mypy_cache
  | \.tox
  | \.venv
  | app
  | data
  | kamus
)/
'''

[tool.coverage.run]
omit = ["**/__main__.py"]

[tool.coverage.report]
show_missing = true
exclude_lines = ['pragma: no cover', 'if __name__ == "__main__":']
